# pos_engenharia_de_machine_learning

./: README.md  best_model.pkl  dashboard_monitoring.py  decision_tree_model.pkl  logistic_regression_model.pkl  pyproject.toml  requirements.in  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
conf/base/: catalog.yml  parameters.yml
data/02_intermediate/: dataset_kobe_dev.parquet  dataset_kobe_prod.parquet
data/05_model_input/: dataset_kobe_test_dev.parquet  dataset_kobe_test_dev.pickle  dataset_kobe_train_dev.parquet
data/08_reporting/: model_metric_prod_report.parquet
docs/source/: conf.py  index.rst
kobe-project/mlruns/716885193111671413/144f9ec5fc53440f81980cdbb9a3dfd9/artifacts/logistic_model/: MLmodel
kobe-project/mlruns/716885193111671413/1481aa7adc6f4980a0370fe672956e4e/artifacts/tree_model/: MLmodel
kobe-project/mlruns/716885193111671413/15dd43282dcf45048bd043f05d35ee71/artifacts/: predicoes_producao.parquet
kobe-project/mlruns/716885193111671413/1c5a8c4aca1741d4bff9229a4da717cd/artifacts/logistic_model/: model.pkl
kobe-project/mlruns/716885193111671413/1d77afa4503049579815c7977ebd67b8/artifacts/tree_model/: MLmodel  model.pkl
notebooks/: sandbox_data_analysis.ipynb
src/: README.md
src/kobe_project/: __init__.py  __main__.py  settings.py
src/kobe_project/pipelines/Aplicacao/: nodes.py  pipeline.py
src/kobe_project/pipelines/PreparacaoDados/: nodes.py  pipeline.py
src/kobe_project/pipelines/Treinamento/: nodes.py  pipeline.py
(+42 files in other folders)
